// Copyright (c) 2018-2021 The MobileCoin Foundation

/// This file defines attestation-related data structures which support protobuf
syntax = "proto3";

package attest.types;

/// The IAS verification report response encoded as a protocol buffer
message VerificationReport {
        /// The IAS-generated signature over the response string
        bytes sig = 1;

        /// A list of byte strings representing the DER-encoded certificate
        /// chain provided by IAS.
        repeated bytes chain = 2;

        /// The raw report body JSON, as a byte sequence
        string http_body = 3;
}
